--- a/assets/package.json
+++ b/assets/package.json
@@ -5,7 +5,7 @@
     "deploy": "webpack --mode production",
     "watch": "webpack --mode development --watch",
     "elm": "elm",
-    "api": "elm-graphql http://localhost:4000/graphql --base ChampionsApi --output src/"
+    "api": "elm-graphql http://localhost:4000/graphql --base Aisf --output src/"
   },
   "dependencies": {
     "@dillonkearns/elm-graphql": "^3.4.0",
