--- a/.deliver/config
+++ b/.deliver/config
@@ -54,3 +54,13 @@ pre_erlang_clean_compile() {
     APP='$APP' MIX_ENV='$TARGET_MIX_ENV' $MIX_CMD phx.digest $SILENCE
   "
 }
+
+post_extract_release_archive() {
+  status "Removing start_erl.data"
+  __remote "
+    [ -f ~/.profile ] && source ~/.profile
+    set -e
+    cd $DELIVER_TO/$APP/var $SILENCE
+    rm start_erl.data
+  "
+}
