--- a/assets/package.json
+++ b/assets/package.json
@@ -2,8 +2,8 @@
   "repository": {},
   "license": "MIT",
   "scripts": {
-    "deploy": "webpack --mode production",
-    "watch": "webpack --mode development --watch",
+    "build": "webpack --mode=production --progress",
+    "watch": "webpack --mode=development --watch",
     "elm": "elm",
     "api": "elm-graphql http://localhost:4000/graphql --base Aisf --output src/"
   },
@@ -13,11 +13,8 @@
     "phoenix_html": "file:../deps/phoenix_html"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "babel-loader": "^8.0.0",
     "copy-webpack-plugin": "^4.5.0",
-    "css-loader": "^0.28.10",
+    "css-loader": "^3.0.0",
     "elm-format": "^0.8.0",
     "elm-hot-webpack-loader": "^1.0.0",
     "elm-webpack-loader": "^5.0.0",
@@ -25,11 +22,13 @@
     "eslint-config-prettier": "^4.0.0",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint_d": "^5.0.0",
-    "mini-css-extract-plugin": "^0.4.0",
-    "optimize-css-assets-webpack-plugin": "^4.0.0",
+    "mini-css-extract-plugin": "^0.7.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "prettier": "^1.16.4",
     "uglifyjs-webpack-plugin": "^1.2.4",
-    "webpack": "4.4.0",
-    "webpack-cli": "^2.0.10"
+    "webpack": "^4.10.2",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.4",
+    "webpack-merge": "^4.1.2"
   }
 }
