--- a/assets/package.json
+++ b/assets/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "copy-webpack-plugin": "^4.5.0",
     "css-loader": "^3.0.0",
+    "elm": "^0.19.1",
     "elm-format": "^0.8.0",
     "elm-hot-webpack-loader": "^1.0.0",
     "elm-webpack-loader": "^5.0.0",
